Fix url wrapping for small width screens

--- a/content/media/css/style.less
+++ b/content/media/css/style.less
@@ -179,6 +179,10 @@ footer {
         .proj_techs_used ul li:first-child {
             margin-top: 0;
         }
+
+        .proj_source_url {
+            word-wrap: break-word;
+        }
     }
 
     .proj_title {
